--- a/codigo/aprendiendo-angular/src/app/videojuego/videojuego.component.html
+++ b/codigo/aprendiendo-angular/src/app/videojuego/videojuego.component.html
@@ -1,5 +1,6 @@
 <h2>{{titulo}}</h2>
 <p>{{textoListado}}</p>
+<button (click)="cambiarTitulo()">Cambiar titulo</button>
 <ul>
     <li>GTA</li>
     <li>Prince of Persia</li>
