--- a/codigo/aprendiendo-angular/src/app/app.component.html
+++ b/codigo/aprendiendo-angular/src/app/app.component.html
@@ -4,9 +4,9 @@
   </h1>
   <p>Vamos a aprender Angular juntos</p>
 
-  <button (click)="ocultarVideojuegos(false)" *ngIf="mostrarVideojuegos">Ocultar Videojuegos</button>
-  <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrarVideojuegos">Mostrar Videojuegos</button>
+ <!-- <button (click)="ocultarVideojuegos(false)" *ngIf="mostrarVideojuegos">Ocultar Videojuegos</button>
+  <button (click)="ocultarVideojuegos(true)" *ngIf="!mostrarVideojuegos">Mostrar Videojuegos</button>-->
   <cursos></cursos> 
-  <videojuego *ngIf="mostrarVideojuegos"></videojuego>
+  <!--<videojuego *ngIf="mostrarVideojuegos"></videojuego>-->
   <zapatillas></zapatillas>
 </div>
