Se añade evento blur a un input de zapatillas

--- a/CursoAngularBasic/codigo/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
+++ b/CursoAngularBasic/codigo/aprendiendo-angular/src/app/zapatillas/zapatillas.component.html
@@ -1,7 +1,7 @@
 <h2>{{titulo}}</h2>
 <p> Añadir marca</p>
 <p>
-<input type="text" [(ngModel)]="miMarca"/>
+<input type="text" [(ngModel)]="miMarca" (blur)="onBlur()"/>
 </p>
 <button (click)="getMarca()"> Mostrar marca </button>
 <button (click)="addMarca()"> Añadir marca</button>
